CORE-7112: Fix textarea scrollbar in IE;

--- a/app/styles/dataCards/modal-dialog.scss
+++ b/app/styles/dataCards/modal-dialog.scss
@@ -364,6 +364,7 @@ manage-lens-dialog-v2 {
         }
       }
       textarea.optional-message {
+        overflow: auto;
         height: 5rem;
         padding: 0.5rem;
         box-sizing: border-box;
